# odoodev-gui

./: .eslintrc.cjs  .gitignore  .project-tips  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  components.json  eslint.config.js  index.html  install.sh  package.json  pnpm-lock.yaml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLI_INTEGRATION.md  DECISIONS.md  MACOS_SIGNING.md  PLAN.md  TAURI_API.md
src/: App.tsx  i18n.ts  main.tsx  monaco.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  docker_check.rs  installer.rs  lib.rs  log_parser.rs  main.rs  models.rs  odoodev.rs  pypi.rs  server_manager.rs
src-tauri/src/commands/: database.rs  docker.rs  doctor.rs  editor.rs  env.rs  init_cmd.rs  migrate.rs  mod.rs  playbook.rs  repos.rs  self_update.rs  server.rs  system.rs  venv.rs  versions.rs
src/components/: Header.tsx  InstallDialog.tsx  Sidebar.tsx  UpdateBadge.tsx
src/components/dashboard/: Dashboard.tsx  StatusBadge.tsx  VersionCard.tsx
src/components/database/: BackupDialog.tsx  DatabasePanel.tsx  DropConfirmDialog.tsx  NameInputDialog.tsx  OperationProgress.tsx  RestoreDialog.tsx
src/components/docker/: BenchPanel.tsx  ContainerCard.tsx  DockerLogViewer.tsx  DockerPanel.tsx  RuntimeBanner.tsx  RuntimeServiceBanner.tsx
src/components/doctor/: DoctorPanel.tsx
src/hooks/: useDockerBench.ts  useDockerLogs.ts  useEnvSetup.ts  useInitProgress.ts  useLogStream.ts  useOdoodev.ts  usePlaybookRun.ts  usePolling.ts  useReposProgress.ts  useVenvSetup.ts
src/lib/: appUpdate.ts  backupDir.ts  clipboard.ts  constants.ts  dotPath.ts  errors.ts  tauri.ts
src/locales/: de.json  en.json
src/store/: appStore.ts  dbTagStore.ts  presetStore.ts  toastStore.ts
src/styles/: globals.css
src/types/: index.ts  playbookSchema.ts
(+48 files in other folders)
