[package]
name = "odoodev-gui"
version = "1.2.6"
edition = "2021"
rust-version = "1.75"

[lib]
name = "odoodev_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml (dtolnay) was deprecated/archived in 2024; serde_yaml_ng is the
# maintained drop-in fork. Aliased to `serde_yaml` so call sites stay unchanged.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
anyhow = "1"
thiserror = "2"
which = "7"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
